--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
   <div class="site-head">
+    <p>login / signup</p>
     <h2>LolliFudHub <br>Delivery</h2>
+   
 
     <div class="navbar">
       <ul>
