formarted week specials

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <div class="navbar">
       <ul>
-        <li>Home</li>
-        <li>About Us</li>
-        <li>Contact Us</li>
-        <li>Menus</li>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Contact Us</a></li>
+        <li><a href="">Menus</a></li>
         <a class="baga"><i class="fa fa-bars"></i> </a>
       </ul>
 
@@ -120,7 +120,7 @@
     </div>
     <br>
     <div class="specials">
-      <h3>Specials</h3>
+      <h3>Week Specials</h3>
       <div class="row">
         <div class="column">
           <div class="card">
