added styling to nav links

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <h2>Our Menu & specials</h2>
         <div class="menu">
             <ul>
-              <li><a>BreakFast</a></li>
-              <li><a>Snacks</a></li>
-              <li><a>Lunch</a></li>
-              <li><a>Dessert</a></li>
-              <li><a>Drinks</a></li>
-              <li><a>Dinner</a></li>
-              <li><a>Soups</a></li>
+              <li><a><img class="img" src="./images/food (1).png"><br>BreakFast</a></li>
+              <li><a><img class="img" src="./images/food.png"><br>Snacks</a></li>
+              <li><a><img class="img" src="./images/lunch.png"><br>Lunch</a></li>
+              <li><a><img class="img" src="./images/cake-pop.png"><br>Dessert</a></li>
+              <li><a><img class="img" src="./images/soda.png"><br>Drinks</a></li>
+              <li><a><img class="img" src="./images/dinner.png"><br>Dinner</a></li>
+              <li><a><img class="img" src="./images/eat.png"><br>Soups</a></li>
             </ul>
 
         </div>
