changed the image grid gallery

--- a/index.html
+++ b/index.html
@@ -66,58 +66,43 @@
 
 
 
-    <div class="menuOverview">
-      <h3>Order and taste to your place</h3>
-      <div class="row">
-        <div class="column">
-          <div class="card">
-            <h3>Card 1</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
-        </div>
-
-        <div class="column">
-          <div class="card">
-            <h3>Card 2</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
-        </div>
-
-        <div class="column">
-          <div class="card">
-            <h3>Card 3</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
-        </div>
+    <div class="rows"> 
+      <div class="columns">
+        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="/w3images/rocks.jpg" style="width:100%">
+        <img src="/w3images/falls2.jpg" style="width:100%">
+        <img src="/w3images/paris.jpg" style="width:100%">
+        <img src="/w3images/nature.jpg" style="width:100%">
+        <img src="/w3images/mist.jpg" style="width:100%">
+        <img src="/w3images/paris.jpg" style="width:100%">
       </div>
-      <br>
-      <div class="row">
-        <div class="column">
-          <div class="card">
-            <h3>Card 4</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
-        </div>
-        <div class="column">
-          <div class="card">
-            <h3>Card 4</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
-        </div>
-        <div class="column">
-          <div class="card">
-            <h3>Card 4</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
-        </div>
+      <div class="columns">
+        <img src="/w3images/underwater.jpg" style="width:100%">
+        <img src="/w3images/ocean.jpg" style="width:100%">
+        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="/w3images/mountainskies.jpg" style="width:100%">
+        <img src="/w3images/rocks.jpg" style="width:100%">
+        <img src="/w3images/underwater.jpg" style="width:100%">
+      </div>  
+      <div class="columns">
+        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="/w3images/rocks.jpg" style="width:100%">
+        <img src="/w3images/falls2.jpg" style="width:100%">
+        <img src="/w3images/paris.jpg" style="width:100%">
+        <img src="/w3images/nature.jpg" style="width:100%">
+        <img src="/w3images/mist.jpg" style="width:100%">
+        <img src="/w3images/paris.jpg" style="width:100%">
+      </div>
+      <div class="columns">
+        <img src="/w3images/underwater.jpg" style="width:100%">
+        <img src="/w3images/ocean.jpg" style="width:100%">
+        <img src="/w3images/wedding.jpg" style="width:100%">
+        <img src="/w3images/mountainskies.jpg" style="width:100%">
+        <img src="/w3images/rocks.jpg" style="width:100%">
+        <img src="/w3images/underwater.jpg" style="width:100%">
       </div>
     </div>
+    
     <br>
     <div class="specials">
       <h3>Week Specials</h3>
