ft(add:background image)

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 <body>
   <div class="site-head">
-    <p>login / signup</p>
+    <!-- <img class="img" src="./images/drinks 8.jpg"> -->
+    <p><a href="">login</a> / <a href="">signup</a></p>
+
     <h2>LolliFudHub <br>Delivery</h2>
-   
+
 
     <div class="navbar">
       <ul>
@@ -31,118 +33,102 @@
 
 
   <div class="container">
+    <div class="contains">
+      <div class="slideshow-container">
 
-    <div class="slideshow-container">
+        <div class="mySlides fade">
 
-      <div class="mySlides fade">
-
-        <img src="img_nature_wide.jpg" style="width:100%">
-        <div class="text">Caption Text</div>
-      </div>
-
-      <div class="mySlides fade">
-
-        <img src="img_snow_wide.jpg" style="width:100%">
-        <div class="text">Caption Two</div>
-      </div>
-
-      <div class="mySlides fade">
-
-        <img src="img_mountains_wide.jpg" style="width:100%">
-        <div class="text">Caption Three</div>
-      </div>
-
-    </div>
-    <br>
-
-    <div style="text-align:center">
-      <span class="dot"></span>
-      <span class="dot"></span>
-      <span class="dot"></span>
-    </div>
-
-
-
-
-
-
-    <div class="rows"> 
-      <div class="columns">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/falls2.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-        <img src="/w3images/nature.jpg" style="width:100%">
-        <img src="/w3images/mist.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-      </div>
-      <div class="columns">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/ocean.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/mountainskies.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-      </div>  
-      <div class="columns">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/falls2.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-        <img src="/w3images/nature.jpg" style="width:100%">
-        <img src="/w3images/mist.jpg" style="width:100%">
-        <img src="/w3images/paris.jpg" style="width:100%">
-      </div>
-      <div class="columns">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/ocean.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/mountainskies.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-      </div>
-    </div>
-    
-    <br>
-    <div class="specials">
-      <h3>Week Specials</h3>
-      <div class="row">
-        <div class="column">
-          <div class="card">
-            <h3>Card 1</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
+          <img src="./images/break3.jpg">
+          <div class="text">Breakfast</div>
         </div>
 
-        <div class="column">
-          <div class="card">
-            <h3>Card 2</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
+        <div class="mySlides fade">
+
+          <img src="./images/soup1.jpg">
+          <div class="text">Soup</div>
         </div>
 
-        <div class="column">
-          <div class="card">
-            <h3>Card 3</h3>
-            <p>Some text</p>
-            <p>Some text</p>
-          </div>
+
+        <div class="mySlides fade">
+
+          <img src="./images/drinks3.jpg">
+          <div class="text">Drinks</div>
         </div>
 
-        <div class="column">
-          <div class="card">
-            <h3>Card 4</h3>
-            <p>Some text</p>
-            <p>Some text</p>
+      </div>
+      <br>
+
+      <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+      <div class="content">
+        <h3>Hungry? <br> Order from LolliFudHub</h3>
+        <h3>Order food online in your district</h3>
+        <div class="rows">
+          <div class="columns">
+            <img src="./images/bakery2.jpg" style="width:100%">
+            <img src="./images/bakery3.jpeg" style="width:100%">
+            <img src="./images/break1.jpg" style="width:100%">
+            <img src="./images/break3.jpg" style="width:100%">
+            <img src="./images/food5.jpg" style="width:100%">
+            <img src="./images/drinks1.jpg" style="width:100%">
+            <img src="./images/food4.jpg" style="width:100%">
+          </div>
+          <div class="columns">
+            <img src="./images/break1.jpg" style="width:100%">
+            <img src="./images/break1.jpg" style="width:100%">
+            <img src="./images/soup2.webp" style="width:100%">
+            <img src="./images/drinks7.jpg" style="width:100%">
+            <img src="./images/drinks3.jpg" style="width:100%">
+            <img src="./images/bakery3.jpeg" style="width:100%">
+          </div>
+          <div class="columns">
+            <img src="./images/food6.jpg" style="width:100%">
+            <img src="./images/break2.jpg" style="width:100%">
+            <img src="./images/soup2.webp" style="width:100%">
+            <img src="./images/bakery2.jpg" style="width:100%">
+            <img src="./images/drinks7.jpg" style="width:100%">
+            <img src="./images/soup1.jpg" style="width:100%">
+            <img src="./images/soup4.jpg" style="width:100%">
+          </div>
+          <div class="columns">
+            <img src="./images/drinks1.jpg" style="width:100%">
+            <img src="./images/drinks 8.jpg" style="width:100%">
+            <img src="./images/food4.jpg" style="width:100%">
+            <img src="./images/food3.jpg" style="width:100%">
+            <img src="./images/food5.jpg" style="width:100%">
+            <img src="./images/break2.jpg" style="width:100%">
           </div>
         </div>
       </div>
+      <br>
 
+      <div class="specials">
+        <h3>Week Specials</h3>
+        <h3>Take care or your cravings</h3>
+        <div class="rows">
+          <div class="columns">
+            <img src="./images/bakery2.jpg" style="width:100%">
+
+          </div>
+          <div class="columns">
+            <img src="./images/soup2.webp" style="width:100%">
+
+          </div>
+          <div class="columns">
+            <img src="./images/food4.jpg" style="width:100%">
+
+          </div>
+          <div class="columns">
+            <img src="./images/drinks1.jpg" style="width:100%">
+
+          </div>
+        </div>
+
+      </div>
     </div>
-
-
   </div>
   <div class="footer">
     <p>&copyAllrightsreservedLollifudhub2020</p>
