--- a/index.html
+++ b/index.html
@@ -68,38 +68,38 @@
         <h3>Order food online in your district</h3>
         <div class="rows">
           <div class="columns">
-            <img src="./images/bakery2.jpg" style="width:100%">
-            <img src="./images/bakery3.jpeg" style="width:100%">
-            <img src="./images/break1.jpg" style="width:100%">
-            <img src="./images/break3.jpg" style="width:100%">
-            <img src="./images/food5.jpg" style="width:100%">
-            <img src="./images/drinks1.jpg" style="width:100%">
-            <img src="./images/food4.jpg" style="width:100%">
+            <img src="./images/bakery2.jpg" >
+            <img src="./images/bakery3.jpeg">
+            <img src="./images/break1.jpg" >
+            <img src="./images/break3.jpg" >
+            <img src="./images/food5.jpg" >
+            <img src="./images/drinks1.jpg" >
+            <img src="./images/food4.jpg" >
           </div>
           <div class="columns">
-            <img src="./images/break1.jpg" style="width:100%">
-            <img src="./images/break1.jpg" style="width:100%">
-            <img src="./images/soup2.webp" style="width:100%">
-            <img src="./images/drinks7.jpg" style="width:100%">
-            <img src="./images/drinks3.jpg" style="width:100%">
-            <img src="./images/bakery3.jpeg" style="width:100%">
+            <img src="./images/break1.jpg">
+            <img src="./images/break1.jpg">
+            <img src="./images/soup2.webp" >
+            <img src="./images/drinks7.jpg">
+            <img src="./images/drinks3.jpg">
+            <img src="./images/bakery3.jpeg">
           </div>
           <div class="columns">
-            <img src="./images/food6.jpg" style="width:100%">
-            <img src="./images/break2.jpg" style="width:100%">
-            <img src="./images/soup2.webp" style="width:100%">
-            <img src="./images/bakery2.jpg" style="width:100%">
-            <img src="./images/drinks7.jpg" style="width:100%">
-            <img src="./images/soup1.jpg" style="width:100%">
-            <img src="./images/soup4.jpg" style="width:100%">
+            <img src="./images/food6.jpg">
+            <img src="./images/break2.jpg">
+            <img src="./images/soup2.webp">
+            <img src="./images/bakery2.jpg">
+            <img src="./images/drinks7.jpg">
+            <img src="./images/soup1.jpg">
+            <img src="./images/soup4.jpg">
           </div>
           <div class="columns">
-            <img src="./images/drinks1.jpg" style="width:100%">
-            <img src="./images/drinks 8.jpg" style="width:100%">
-            <img src="./images/food4.jpg" style="width:100%">
-            <img src="./images/food3.jpg" style="width:100%">
-            <img src="./images/food5.jpg" style="width:100%">
-            <img src="./images/break2.jpg" style="width:100%">
+            <img src="./images/drinks1.jpg" >
+            <img src="./images/drinks 8.jpg">
+            <img src="./images/food4.jpg" >
+            <img src="./images/food3.jpg">
+            <img src="./images/food5.jpg">
+            <img src="./images/break2.jpg">
           </div>
         </div>
       </div>
@@ -110,19 +110,19 @@
         <h3>Take care or your cravings</h3>
         <div class="rows">
           <div class="columns">
-            <img src="./images/bakery2.jpg" style="width:100%">
+            <img src="./images/bakery2.jpg">
 
           </div>
           <div class="columns">
-            <img src="./images/soup2.webp" style="width:100%">
+            <img src="./images/soup2.webp">
 
           </div>
           <div class="columns">
-            <img src="./images/food4.jpg" style="width:100%">
+            <img src="./images/food4.jpg">
 
           </div>
           <div class="columns">
-            <img src="./images/drinks1.jpg" style="width:100%">
+            <img src="./images/drinks1.jpg">
 
           </div>
         </div>
