--- a/contactUs/contact.html
+++ b/contactUs/contact.html
@@ -15,7 +15,7 @@
  
   <div class="site-head">
     
-    <p>login / signup</p>
+    <p>logout</p>
     <h2>LolliFudHub <br>Delivery</h2>
     <div class="navbar">
       <ul>
