changes to signupPage

--- a/signup.html
+++ b/signup.html
@@ -11,6 +11,9 @@
         <h1>Sign Up</h1>
         <p>Create account and enjoy our tasty meals</p>
         <hr>
+        <div class="form">
+            <form action="">
+       
 
         <label for="email"><b>Email</b></label>
         <input type="text" placeholder="Enter Email" name="email" required>
@@ -34,9 +37,11 @@
             <button type="button" class="cancelbtn"> Cancel </button>
             <button type="submit" class="signupbtn"> Sign Up</button>
 
-        </div>
+            <p>Already have an account? <a href="">Login</a> </p>
 
-    
+        </div>
+    </form>
+    </div>
     </div>
 
 </div>
