toggole hide and show menu lists onclick

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="site-head">
-        <p>login / signup</p>
+        <p>logout</p>
         <h2>LolliFudHub <br>Delivery</h2>
        
     
@@ -32,13 +32,13 @@
         <h2>Our Menu & specials</h2>
         <div class="menu">
             <ul>
-              <li><a><img class="img" src="./images/food (1).png"><br>BreakFast</a></li>
-              <li><a><img class="img" src="./images/food.png"><br>Snacks</a></li>
-              <li><a><img class="img" src="./images/lunch.png"><br>Lunch</a></li>
-              <li><a><img class="img" src="./images/cake-pop.png"><br>Dessert</a></li>
-              <li><a><img class="img" src="./images/soda.png"><br>Drinks</a></li>
-              <li><a><img class="img" src="./images/dinner.png"><br>Dinner</a></li>
-              <li><a><img class="img" src="./images/eat.png"><br>Soups</a></li>
+             <li > <button class="br"><a><img class="img" src="./images/food (1).png"><br>BreakFast</a></button></li>
+              <li ><button class="sn"><a><img class="img" src="./images/food.png"><br>Snacks</a></button></li>
+              <li><button class="lh"><a><img class="img" src="./images/lunch.png"><br>Lunch</a></button></li>
+              <li><button class="ds"><a><img class="img" src="./images/cake-pop.png"><br>Dessert</a></button></li>
+              <li><button class="dr"><a><img class="img" src="./images/soda.png"><br>Drinks</a></button></li>
+              <li><button class="din"><a><img class="img" src="./images/dinner.png"><br>Dinner</a></button></li>
+              <li><button class="su"><a><img class="img" src="./images/eat.png"><br>Soups</a></button></li>
             </ul>
 
         </div>
@@ -431,5 +431,6 @@
       <div class="footer">
         <p>&copyAllrightsreservedLollifudhub2020</p>
       </div>
+      <script src="./App.js"></script>
 </body>
 </html>
