added background image

--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,7 @@
     
       </div>
       <div class="container">
+       <div class="content">
         <h2>Our Menu & specials</h2>
         <div class="menu">
             <ul>
@@ -427,6 +428,7 @@
 
 
         </div>
+      </div>
       </div>
       <div class="footer">
         <p>&copyAllrightsreservedLollifudhub2020</p>
