--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>lollifudhub</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>LolliFudHub</h1>
+        <h2>taste the greatness<br>make your order right now!</h2>
+        <button class="loginbtn">Login</button>
+        <button class="signupbtn">SignUp</button>
+
+    </div>
+    <script src="./App.js"></script>
 </body>
 </html>
