--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>LolliFudHub</h1>
+        <h1><img src="./images/soda.png"> LolliFudHub <img src="./images/food.png"></h1>
         <h2>taste the greatness<br>make your order right now!</h2>
         <button class="loginbtn">Login</button>
         <button class="signupbtn">SignUp</button>
