added section ids

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -35,17 +35,17 @@
       <h2>Our Menu & specials</h2>
       <div class="menu">
         <ul>
-          <li> <button class="br"><a><img class="img" src="./images/food (1).png"><br>BreakFast</a></button></li>
-          <li><button class="sn"><a><img class="img" src="./images/food.png"><br>Snacks</a></button></li>
-          <li><button class="lh"><a><img class="img" src="./images/lunch.png"><br>Lunch</a></button></li>
-          <li><button class="ds"><a><img class="img" src="./images/cake-pop.png"><br>Dessert</a></button></li>
-          <li><button class="dr"><a><img class="img" src="./images/soda.png"><br>Drinks</a></button></li>
-          <li><button class="din"><a><img class="img" src="./images/dinner.png"><br>Dinner</a></button></li>
-          <li><button class="su"><a><img class="img" src="./images/eat.png"><br>Soups</a></button></li>
+          <li> <button class="br"><a href="#breakfast"><img class="img" src="./images/food (1).png"><br>BreakFast</a></button></li>
+          <li><button class="sn"><a href="#snacks"><img class="img" src="./images/food.png"><br>Snacks</a></button></li>
+          <li><button class="lh"><a href="#lunch"><img class="img" src="./images/lunch.png"><br>Lunch</a></button></li>
+          <li><button class="ds"><a href="#dessert"><img class="img" src="./images/cake-pop.png"><br>Dessert</a></button></li>
+          <li><button class="dr"><a href="#drinks"><img class="img" src="./images/soda.png"><br>Drinks</a></button></li>
+          <li><button class="din"><a href="#dinner"><img class="img" src="./images/dinner.png"><br>Dinner</a></button></li>
+          <li><button class="su"><a href="#soup"><img class="img" src="./images/eat.png"><br>Soups</a></button></li>
         </ul>
 
       </div>
-      <div class="breakfast">
+      <div class="breakfast" id="breakfast">
         <p>Enjoy your breakfast</p>
         <table>
           <tr>
@@ -94,7 +94,7 @@
         </div>
 
       </div>
-      <div class="snacks">
+      <div class="snacks" id="snacks">
         <p>Enjoy your snacks</p>
         <table>
           <tr>
@@ -146,7 +146,7 @@
 
 
       </div>
-      <div class="lunch">
+      <div class="lunch" id="lunch">
         <p>Enjoy your lunch</p>
         <table>
           <tr>
@@ -198,7 +198,7 @@
 
 
       </div>
-      <div class="dessert">
+      <div class="dessert" id="dessert">
         <p>Enjoy your dessert</p>
         <table>
           <tr>
@@ -250,7 +250,7 @@
 
 
       </div>
-      <div class="drinks">
+      <div class="drinks" id="drinks">
         <p>Enjoy your drinks</p>
         <table>
           <tr>
@@ -302,7 +302,7 @@
 
 
       </div>
-      <div class="dinner">
+      <div class="dinner" id="dinner">
         <p>Enjoy your dinner</p>
         <table>
           <tr>
@@ -355,7 +355,7 @@
 
 
       </div>
-      <div class="soup">
+      <div class="soup" id="soup">
         <p>Enjoy your soup</p>
         <table>
           <tr>
