created filter on search bar

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="content">
       <h2>Our Menu & specials</h2>
-      <div class="menu">
+      <div class="menu" id="men">
         <ul>
           <li> <button class="br"><a href="#breakfast"><img class="img" src="./images/food (1).png"><br>BreakFast</a></button></li>
           <li><button class="sn"><a href="#snacks"><img class="img" src="./images/food.png"><br>Snacks</a></button></li>
@@ -410,7 +410,7 @@
     </div>
   </div>
 
-
+<!-- <a class="up "href="#men">^</a> -->
 
 
 
