--- a/signupform/signup.html
+++ b/signupform/signup.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="signup.css">
     <title>SignUp</title>
 </head>
-<body> <div class="signup">
+<body> 
+    <div class="signup">
     <div class="container">
         <h1>Sign Up</h1>
         <p>Create account and enjoy our tasty meals</p>
@@ -34,8 +35,8 @@
         <p>By creating an account you agree to our <a href="#" style="color: rgb(51, 51, 182)174, 174, 201);">Terms & Privacy</a></p>
 
         <div class="fixit">
-            <button type="button" class="cancelbtn"> Cancel </button>
             <button type="submit" class="signupbtn"> <a href="../home/home.html">Sign Up</a></button>
+            <button type="button" class="cancelbtn"> Cancel </button>
 
             <p>Already have an account? <a href="../login form/login.html">Login</a> </p>
 
