--- a/contactUs/contact.html
+++ b/contactUs/contact.html
@@ -23,9 +23,10 @@
         <li><a href="../about form/about.html">About Us</a></li>
         <li><a href="../contactUs/contact.html">Contact Us</a></li>
         <li><a href="../menu/menu.html">Menus</a></li>
-        <a class="baga"><i class="fa fa-bars"></i> </a>
+        
       </ul>
     </div>
+    <a class="baga"><i class="fa fa-bars"></i> </a>
   </div>
   <div class="container">
 
@@ -63,6 +64,7 @@
   <div class="footer">
     <p>&copyAllrightsreservedLollifudhub2020</p>
   </div>
+  <script src="./App.js"></script>
 </body>
 
 </html>
