--- a/menu/menu.html
+++ b/menu/menu.html
@@ -23,8 +23,7 @@
         <li><a href="../about form/about.html">About Us</a></li>
         <li><a href="../contactUs/contact.html">Contact Us</a></li>
         <li><a href="../menu/menu.html">Menus</a></li>
-        <li> <button data-target="#cart">Cart (<span class="total-count"></span>)</button><button>Clear Cart</button>
-        </li>
+        <li> <a href="#cart"><button >Cart</button></a></li>
         <li><input id="searchbar" onkeyup="search_menu()" type="text" name="search" placeholder="Search menus..."> </li>
       
       </ul>
@@ -59,24 +58,24 @@
         <p>Enjoy your breakfast</p>
         <table>
           <tr>
-            <td>ROLEX WRAP COMBO</td>
-            <td>2000</td>
-            <td><button class="btn">order</button></td>
+            <td> <span class="shop-item-title">ROLEX WRAP COMBO</span></td>
+            <td> <span class="shop-item-price">2000</span></td>
+            <td><button class=" shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>CHICKEN & EGG WRAP COMBO</td>
-            <td>3000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CHICKEN & EGG WRAP COMBO</span></td>
+            <td> <span class="shop-item-price">3000</span></td>
+            <td><button class=" shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>LOADED CHAPATI COMBO</td>
-            <td>2500</td>
-            <td><button class="btn">order</button></td>
+            <td ><span class="shop-item-title">LOADED CHAPATI COMBO</span></td>
+            <td > <span class="shop-item-price">2500</span></td>
+            <td><button class="  shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>OMELETTE COMBO</td>
-            <td>1500</td>
-            <td><button class="btn">order</button></td>
+            <td ><span class="shop-item-title">OMELETTE COMBO</span></td>
+            <td> <span class="shop-item-price">1500</span></td>
+            <td><button class=" shop-item-button">add to cart</button></td>
           </tr>
 
         </table>
@@ -108,24 +107,24 @@
         <p>Enjoy your snacks</p>
         <table>
           <tr>
-            <td>ROASTED PLANTAIN</td>
-            <td>2000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">ROASTED PLANTAIN</span></td>
+            <td> <span class="shop-item-price">2000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>CHICKEN PIE</td>
-            <td>3000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CHICKEN PIE</span></td>
+            <td> <span class="shop-item-price">3000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>SAMOSAS</td>
-            <td>2500</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">SAMOSAS</span></td>
+            <td> <span class="shop-item-price">2500</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>ONION RINGS</td>
-            <td>1500</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">ONION RINGS</span></td>
+            <td> <span class="shop-item-price">1500</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
 
         </table>
@@ -160,24 +159,24 @@
         <p>Enjoy your lunch</p>
         <table>
           <tr>
-            <td>KIDDIE SANDWICHES</td>
-            <td>20000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">KIDDIE SANDWICHES</span></td>
+            <td> <span class="shop-item-price">20000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>GRILLED TILAPIA</td>
-            <td>30000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">GRILLED TILAPIA</span></td>
+            <td> <span class="shop-item-price">30000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>BEEF STEAK</td>
-            <td>25000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">BEEF STEAK</span></td>
+            <td> <span class="shop-item-price">25000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>MUSHROOM BEEF STEAK</td>
-            <td>15000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">MUSHROOM BEEF STEAK</span></td>
+            <td> <span class="shop-item-price">15000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
 
         </table>
@@ -212,24 +211,24 @@
         <p>Enjoy your dessert</p>
         <table>
           <tr>
-            <td>FRUITFUL DELIGHT</td>
-            <td>20000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">FRUITFUL DELIGHT</span></td>
+            <td> <span class="shop-item-price">20000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>PREMIUM ICE CREAM</td>
-            <td>30000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">PREMIUM ICE CREAM</span></td>
+            <td> <span class="shop-item-price">30000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>A LA MODE</td>
-            <td>25000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">A LA MODE</span></td>
+            <td> <span class="shop-item-price">25000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>CAKE SLICES</td>
-            <td>15000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CAKE SLICES</span></td>
+            <td> <span class="shop-item-price">15000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
 
         </table>
@@ -264,24 +263,24 @@
         <p>Enjoy your drinks</p>
         <table>
           <tr>
-            <td>CREAMY MILKSHAKES</td>
-            <td>20000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CREAMY MILKSHAKES</span></td>
+            <td> <span class="shop-item-price">20000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>ICED LATTE</td>
-            <td>30000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">ICED LATTE</span></td>
+            <td> <span class="shop-item-price">30000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>CAPPUCCINO</td>
-            <td>25000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CAPPUCCINO</span></td>
+            <td> <span class="shop-item-price">25000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>COFFEE</td>
-            <td>15000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">COFFEE</span></td>
+            <td> <span class="shop-item-price">15000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
 
         </table>
@@ -316,24 +315,24 @@
         <p>Enjoy your dinner</p>
         <table>
           <tr>
-            <td>CHICKEN TENDERS PLATTER</td>
-            <td>20000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CHICKEN TENDERS PLATTER</span></td>
+            <td> <span class="shop-item-price">20000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>CARIBBEAN JERK CHICKEN</td>
-            <td>30000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CARIBBEAN JERK CHICKEN</span></td>
+            <td> <span class="shop-item-price">30000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>CHICKEN WING MEAL</td>
-            <td>25000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CHICKEN WING MEAL</span></td>
+            <td> <span class="shop-item-price">25000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>JUICY GRILLED CHICKEN BREAST</td>
-            <td>15000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">JUICY GRILLED CHICKEN BREAST</span></td>
+            <td> <span class="shop-item-price">15000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
 
         </table>
@@ -369,24 +368,24 @@
         <p>Enjoy your soup</p>
         <table>
           <tr>
-            <td>CLEAR CHICKEN & VEG.SOUP</td>
-            <td>20000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CLEAR CHICKEN & VEG.SOUP</span></td>
+            <td> <span class="shop-item-price">20000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>LENTIL SOUP (SATURDAY ONLY)</td>
-            <td>30000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">LENTIL SOUP (SATURDAY ONLY)</span></td>
+            <td> <span class="shop-item-price">30000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>CREAM OF MUSHROOM SOUP</td>
-            <td>25000</td>
-            <td><button class="btn">order</button></td>
+            <td><span class="shop-item-title">CREAM OF MUSHROOM SOUP</span></td>
+            <td> <span class="shop-item-price">25000</span></td>
+            <td><button class="shop-item-button">add to cart</button></td>
           </tr>
           <tr>
-            <td>THAI CHICKEN & NOODLE SOUP</td>
-            <td>15000</td>
-            <td><button class="btn" data-name="banana">order</button></td>
+            <td><span class="shop-item-title">THAI CHICKEN & NOODLE SOUP</span></td>
+            <td> <span class="shop-item-price">15000</span></td>
+            <td><button class="shop-item-button" data-name="banana">add to cart</button></td>
           </tr>
 
         </table>
@@ -418,8 +417,24 @@
     </div>
   </div>
 
-  <!-- <a class="up "href="#">^</a> -->
-
+  <!--cart model-->
+  <div id="cart">
+  <section class="container content-section">
+    <h2 class="section-header">Cart</h2>
+    <div class="cart-row">
+      <span class="cart-item cart-header cart-column">Item</span>
+      <span class="cart-price cart-header cart-column">Price</span>
+      <span class="cart-quantity cart-header cart-column">Quantity</span>
+    </div>
+    <div class="cart-items"></div>
+    <div class="cart-total">
+      <strong class="cart-total-title">Total</strong>
+      <span class="cart-total-price">0/=</span>
+    </div>
+    <button class="btn-purchase" type="button">order</button> 
+  </section>
+</div>
+  <!--end of cart section-->
 
 
   <div class="footer">
