--- a/home/home.html
+++ b/home/home.html
@@ -65,7 +65,7 @@
       </div>
       <div class="content">
         <h3>Hungry? <br> Order from LolliFudHub</h3>
-        <h3>Order food online in your district</h3>
+        <h3>Order food online in your district <br> checkout our menu and get your fill</h3>
         <div class="rows">
           <div class="columns">
             <img src="./images/bakery2.jpg">
