added signup validation

--- a/home/home.html
+++ b/home/home.html
@@ -101,7 +101,7 @@
 
       <div class="specials">
         <h3>Week Specials</h3>
-        <h3>Take care or your cravings</h3>
+        <h3>Take care of your cravings</h3>
         <div class="rows">
           <div class="columns">
             <img src="./images/bakery2.jpg">
