--- a/signupform/signup.html
+++ b/signupform/signup.html
@@ -13,7 +13,7 @@
         <p>Create account and enjoy our tasty meals</p>
         <hr>
         <div class="form">
-            <form action="">
+            <form method="POST">
        
 
         <label for="email"><b>Email</b></label>
