--- a/signupform/signup.html
+++ b/signupform/signup.html
@@ -32,7 +32,7 @@
             <input type="checkbox" checked="checked" name="remember">Remember me
         </label>
 
-        <p>By creating an account you agree to our <a href="#" style="color: rgb(51, 51, 182)174, 174, 201);">Terms & Privacy</a></p>
+        <p>By creating an account you agree to our <a href="#" style="color: rgb((51, 51, 182)174, 174, 201)">Terms & Privacy</a></p>
 
         <div class="fixit">
             <button type="submit" class="signupbtn" onclick="store()">Sign Up</button>
