encrypted login password

--- a/login form/login.html
+++ b/login form/login.html
@@ -25,7 +25,7 @@
         
             <div class="pwdd">
                 <label for="pwd"> <b>Password</b></label>
-                <input id="userPw" type="text" class="puts" placeholder="Enter Password" name="Password" required>
+                <input id="userPw" type="password" class="puts" placeholder="Enter Password" name="Password" required>
             </div>
                 
             <div>
