added cart count

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -23,7 +23,7 @@
         <li><a href="../about form/about.html">About Us</a></li>
         <li><a href="../contactUs/contact.html">Contact Us</a></li>
         <li><a href="../menu/menu.html">Menus</a></li>
-        <li> <a href="#cart"><button >Cart</button></a></li>
+        <li> <a href="#cart"><button  >Cart(<span class="total-count">0</span>)</button></a></li>
         <li><input id="searchbar" onkeyup="search_menu()" type="text" name="search" placeholder="Search menus..."> </li>
       
       </ul>
