added font style and sized

--- a/home/home.html
+++ b/home/home.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
   <link rel="stylesheet" href="./styles.css">
   <title>lollifudhub</title>
 </head>
@@ -32,7 +33,7 @@
   </div>
 
 
-  <div class="container">
+  <div class="parallax">
     <div class="contains">
       <div class="slideshow-container">
 
@@ -64,7 +65,7 @@
         <span class="dot"></span>
       </div>
       <div class="content">
-        <h3>Hungry? <br> Order from LolliFudHub</h3>
+        <h3>Hungry? <br> Order from  LolliFudHub</h3>
         <h3>Order food online in your district <br> checkout our menu and get your fill</h3>
         <div class="rows">
           <div class="columns">
@@ -105,22 +106,25 @@
         <div class="rows">
           <div class="columns">
             <img src="./images/bakery2.jpg">
-
+        
+            <button class="shop-item-button"><a href="../menu/menu.html">take a peek</a></button>
           </div>
           <div class="columns">
             <img src="./images/soup2.webp">
-
+   
+            <button class="shop-item-button"><a href="../menu/menu.html">take a peek</a></button>
           </div>
           <div class="columns">
             <img src="./images/food4.jpg">
 
+            <button class="shop-item-button"><a href="../menu/menu.html">take a peek</a></button>
           </div>
           <div class="columns">
             <img src="./images/drinks1.jpg">
-
+            <button class="shop-item-button"><a href="../menu/menu.html">take a peek</a></button>
           </div>
         </div>
-
+        <!-- <a href="http://server/page.html#anchor-name">Link text</a> -->
       </div>
     </div>
   </div>
