--- a/menu/menu.html
+++ b/menu/menu.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 
   <title>Menus</title>
 </head>
@@ -32,7 +32,7 @@
     <a class="baga"><i class="fa fa-bars"></i> </a>
 
   </div>
-  <div class="container">
+  <div class="parallax">
     <div class="content">
       <h2>Our Menu & specials</h2>
       <div class="menu" id="men">
@@ -263,7 +263,7 @@
         <p>Enjoy your drinks</p>
         <table>
           <tr>
-            <td><span class="shop-item-title">CREAMY MILKSHAKES</span></td>
+            <td><span class="shop-item-title" id="speciall">CREAMY MILKSHAKES</span></td>
             <td> <span class="shop-item-price">20000</span></td>
             <td><button class="shop-item-button">add to cart</button></td>
           </tr>
@@ -415,7 +415,7 @@
 
       </div>
     </div>
-  </div>
+  
 
   <!--cart model-->
   <div id="cart">
@@ -435,7 +435,7 @@
   </section>
 </div>
   <!--end of cart section-->
-
+</div>
 
   <div class="footer">
     <p>&copyAllrightsreservedLollifudhub2020</p>
